--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-298.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-3.84MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-378.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.22MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.03MB/s(Youtube:不良林), server: vfly9.win, port: 443, type: vmess, uuid: 838be9ed-d7a8-4da1-b067-b95d2a8782f5, alterId: 10, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly9.win}}
-  - {name: 🇺🇸 美国-4.35MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-475.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-499.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-1.43MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-5.13MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-308.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 104.156.229.148, port: 36788, type: vmess, uuid: 9fee7249-69fb-490d-e617-cfb54a249932, alterId: 60, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 104.156.229.148}}
+  - {name: 🇫🇷 法国-1.36MB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-154.2KB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 阿联酋-5.05MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
+  - {name: 🇯🇵 日本-362.7KB/s(Youtube:不良林), server: 185.172.113.102, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-306.1KB/s(Youtube:不良林), server: 185.172.113.106, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-435.4KB/s(Youtube:不良林), server: 185.172.113.101, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-352.0KB/s(Youtube:不良林), server: 185.172.113.102, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-390.5KB/s(Youtube:不良林), server: 185.172.113.102, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-298.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-475.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-154.2KB/s(Youtube:不良林)
+      - 阿联酋-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-298.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-475.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-154.2KB/s(Youtube:不良林)
+      - 阿联酋-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-298.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-475.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-154.2KB/s(Youtube:不良林)
+      - 阿联酋-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-298.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-475.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-154.2KB/s(Youtube:不良林)
+      - 阿联酋-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-298.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-475.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-154.2KB/s(Youtube:不良林)
+      - 阿联酋-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-298.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-475.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-154.2KB/s(Youtube:不良林)
+      - 阿联酋-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-298.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-475.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-154.2KB/s(Youtube:不良林)
+      - 阿联酋-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
