--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-308.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 104.156.229.148, port: 36788, type: vmess, uuid: 9fee7249-69fb-490d-e617-cfb54a249932, alterId: 60, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 104.156.229.148}}
   - {name: 🇫🇷 法国-1.36MB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-154.2KB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 阿联酋-5.05MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
+  - {name: 🇨🇳 中国-3.84MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-8.96MB/s(Youtube:不良林), server: 103.166.140.108, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.108}}
   - {name: 🇯🇵 日本-362.7KB/s(Youtube:不良林), server: 185.172.113.102, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-306.1KB/s(Youtube:不良林), server: 185.172.113.106, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-435.4KB/s(Youtube:不良林), server: 185.172.113.101, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-154.2KB/s(Youtube:不良林)
-      - 阿联酋-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-154.2KB/s(Youtube:不良林)
-      - 阿联酋-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-154.2KB/s(Youtube:不良林)
-      - 阿联酋-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-154.2KB/s(Youtube:不良林)
-      - 阿联酋-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-154.2KB/s(Youtube:不良林)
-      - 阿联酋-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-154.2KB/s(Youtube:不良林)
-      - 阿联酋-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-154.2KB/s(Youtube:不良林)
-      - 阿联酋-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
