--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.36MB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-3.84MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
   - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-8.96MB/s(Youtube:不良林), server: 103.166.140.108, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.108}}
+  - {name: 🇨🇳 中国-445.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-479.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-524.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-509.1KB/s(Youtube:不良林), server: 185.160.26.35, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-362.7KB/s(Youtube:不良林), server: 185.172.113.102, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-306.1KB/s(Youtube:不良林), server: 185.172.113.106, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-435.4KB/s(Youtube:不良林), server: 185.172.113.101, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-412.7KB/s(Youtube:不良林), server: 185.172.113.101, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-352.0KB/s(Youtube:不良林), server: 185.172.113.102, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-390.5KB/s(Youtube:不良林), server: 185.172.113.102, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-524.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-509.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-412.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-524.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-509.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-412.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-524.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-509.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-412.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-524.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-509.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-412.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-524.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-509.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-412.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-524.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-509.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-412.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-524.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-509.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-435.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-412.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
 rules:
